<resources>
    <string name="app_name">Palheiro</string>
    <string name="etEmail" />
    <string name="etPassword" />
    <string name="etLogin">Login</string>
    <string name="tvEmail">Email do User</string>
    <string name="txt_titulo">Programar em Android AMSI</string>
    <string name="txt_serie">Android Saga</string>
    <string name="txt_autor">Equipa AMSI</string>
    <string name="txt_ano">2019</string>
    <string name="txt_titulo_dinamico" />
    <string name="txt_serie_dinamico" />
    <string name="txt_autor_dinamico" />
    <string name="txt_ano_dinamico" />
    <string name="txt_menu_lista">Livros (Lista)</string>
    <string name="txt_menu_grelha">Livros (Grelha)</string>
    <string name="txt_comunicar">Comunicar</string>
    <string name="txt_email">Email</string>
    <string name="ndOpen">open</string>
    <string name="ndClose">close</string>
    <string name="etTitulo">Titulo</string>
    <string name="etSerie">Serie</string>
    <string name="etAutor">Autor</string>
    <string name="etano">Ano</string>
    <string name="email_hint">Introduza o seu email</string>
    <string name="password_hint">Introduza a password</string>
    <string name="etSignIn">Sign In</string>
    <string name="etCodigoPostal">Introduza o seu código postal</string>
    <string name="etMorada2">Use se necessário para a morada</string>
    <string name="etMorada">Introduza a sua morada</string>
    <string name="etNIF">Introduza o seu NIF</string>
    <string name="etUsername">Introduza o username</string>
    <string name="nomeProdutoLista">Nome do Produto</string>
    <string name="precoProdutoLista">Preço do Produto</string>
    <string name="marcaProdutoLista">Marca do Produto</string>
    <string name="addProdutoLista">Add</string>
    <string name="txt_menu_produtos">Produtos</string>
    <string name="txtaddCarrinho">Adicionar ao Carrinho</string>
    <string name="txtPrecoDetalhes">Preço</string>
    <string name="txtDescricaoDetalhes">Detalhes do Produto Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="txtDescricaoTituloDetalhes">Descrição:</string>
    <string name="txtNomeDetalhes">Nome do Produto</string>
    <string name="txtFabGuardar">Guardar</string>
    <string name="txtListaComprasDetalhes">Elabore a sua própria lista de compras!</string>
    <string name="txtTituloDetalhes">Titulo</string>
    <string name="txtTituloListaCompraItem">Titulo da Lista de Compra</string>
    <string name="txtFabAdicionar">Adicionar</string>
    <string name="txtNomeItemCarrinho">Nome do produto</string>
    <string name="txtMarcaItemCarrinho">Marca do produto</string>
    <string name="txtLabelQuantidadeItemCarrinho">Quantidade:</string>
    <string name="txtQuantidadeItemCarrinho">10</string>
    <string name="txtLabelTotalItemCarrinho">Total:</string>
    <string name="txtTotalItemCarrinho">10€</string>
    <string name="txtAddItemCarrinho">+</string>
    <string name="txtSubItemCarrinho">-</string>
    <string name="txtLabelMetodoPagamento">Selecione o Método de Pagamento</string>
    <string name="txtLabelMetodoExpedicao">Selecione o Método de Expedição</string>
    <string name="txtLabelCupao">Cupão:</string>
    <string name="txtHintCupao">codigoCupao2025</string>
    <string name="txtBtnComprar">Concluir Compra</string>
    <string name="txtEncomendaEstadoItem">Em Preparação</string>
    <string name="txtLabelEncomendaEstadoItem">Estado:</string>
    <string name="txtEncomendaDataItem">2024-10-12</string>
    <string name="txtLabelEncomendaDataItem">Data:</string>
    <string name="txtUsernameLogin">Indique o seu username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNavCarrinho">Carrinho</string>
    <string name="txtNavEncomendas">Encomendas</string>
    <string name="txtNavPerfil">Perfil</string>
    <string name="txtNavListasCompras">Listas Compras</string>
    <string name="txtNavFaturas">Faturas</string>
    <string name="txtAplicarItemCarrinho">Aplicar</string>
    <string name="txtLabelTotalCarrinho">Total:</string>
    <string name="txtTotalCarrinho">10</string>
    <string name="txtItemProdutoAdicionar">Adicionar</string>
    <string name="txtCategoriaDropdownListaProdutos">Categoria:</string>
    <string name="txtLabelValorNutricionalDelhtalhes">Valor Nutricional:</string>
    <string name="txtValorNutricionalDetalhes">A</string>
    <string name="txtDataFaturaLista">2023-12-31</string>
    <string name="txtLabelDataFaturaLista">Data:</string>
    <string name="txtLabelNFaturaLista">Nº Fatura:</string>
    <string name="txtNFaturaLista">12345123</string>
    <string name="txtTituloFaturaDetalhes">Detalhes da Compra</string>
    <string name="txtNumeroFaturaDetalhes">Número da Fatura:</string>
    <string name="txtNFaturaDetalhes">12345</string>
    <string name="txtMetodoPagamentoFaturaDetalhes">Método de Pagamento:</string>
    <string name="txtMetodoExpedicaoFaturaDetalhes">Método de Expedição:</string>
    <string name="txtTotalFaturaDetalhes">Total:</string>
    <string name="txtDataFaturaDetalhes">Data da Compra:</string>
    <string name="txtLinhasFaturaDetalhes">Linhas da Fatura:</string>
    <string name="txtLabelLvFaturaNomeProduto">Produto:</string>
    <string name="txtLabelQuantidadeLvFatura">Quantidade:</string>
    <string name="txtLabelLvFaturaTotalLinha">Total:</string>
    <string name="txtLabelLvFaturaSubtotalLinha">Subtotal:</string>
    <string name="txtLabelLvFaturaTotalIva">Valor de Imposto:</string>
    <string name="txtLabelLvFaturaIVAPercentagem">Percentagem de IVA:</string>
    <string name="txtLabelLvFaturaPrecoUnitario">Preço Unitário:</string>
    <string name="txtLvFaturaLinhaDescontoTitulo">Linha Desconto</string>
    <string name="txtLabelServerIP">Endereço IP:</string>
    <string name="txtIPExample">e.g., 192.168.1.1</string>
    <string name="txtServerIPBtn">Estabeler Ligação</string>
    <string name="txtProfileUsername">Username</string>
    <string name="LabelProfileEmail">Email:</string>
    <string name="txtLabelProfileNIF">NIF:</string>
    <string name="txtLabelProfileMorada">Morada:</string>
    <string name="txtLabelProfileMorada2">Morada 2:</string>
    <string name="txtLabelProfileCodigoPostal">Codigo Postal:</string>
    <string name="txtProfileBtnGuardar">Guardar</string>
    <string name="txtItemCupaoNome">Nome Cupão</string>
    <string name="txtCupoesMenu">Cupões</string>
</resources>