<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item android:title="@string/txt_menu_produtos"
            android:id="@+id/navProdutos"
            android:icon="@drawable/ic_action_produtos"/>

        <item android:title="@string/txtNavCarrinho"
            android:id="@+id/navCarrinho"
            android:icon="@drawable/ic_action_carrinho"/>

        <item android:title="@string/txtNavEncomendas"
            android:id="@+id/navEncomendas"
            android:icon="@drawable/ic_action_encomenda"/>


        <item android:title="@string/txtNavPerfil"
            android:id="@+id/navPerfil"
            android:icon="@drawable/ic_action_perfil"/>

        <item
            android:id="@+id/navFaturas"
            android:icon="@drawable/ic_action_fatura"
            android:title="@string/txtNavFaturas" />
        <item
            android:id="@+id/navCupoes"
            android:icon="@drawable/ic_action_cupao"
            android:title="@string/txtCupoesMenu" />
        <item android:title="@string/txtNavListasCompras"
            android:id="@+id/navListasCompras"
            android:icon="@drawable/ic_action_lista"/>

    </group>

</menu>