<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".SignInActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etUsername"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/password_hint"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etNIF"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etNIF"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etMorada"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etMorada"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etMorada2"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etMorada2"
        android:text="" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/etCodigoPostal"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/etCodigoPostal"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:onClick="onClickSignIn"
        android:text="@string/etSignIn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
</LinearLayout>