<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarrinhoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ListView
            android:id="@+id/lvCarrinho"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@color/gray"
            android:dividerHeight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLabelMetodoPagamento"
            android:paddingTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinnerMetodosPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLabelMetodoExpedicao"
            android:paddingTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinnerMetodosExpedicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLabelCupao"
            android:paddingTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etCupao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtHintCupao"
            android:inputType="text" />

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtBtnComprar"
            android:backgroundTint="@color/palheiro_green"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>
