<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/item_background"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/ivImagemItemCarrinho"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/programarandroid2"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvNomeItemCarrinho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:text="@string/txtNomeItemCarrinho"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvMarcaItemCarrinho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"
            android:text="@string/txtMarcaItemCarrinho"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/LabelQuantidadeItemCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/gray"
                android:text="@string/txtLabelQuantidadeItemCarrinho"
                android:gravity="center_horizontal"/>


            <TextView
                android:id="@+id/tvQuantidadeItemCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:text="@string/txtQuantidadeItemCarrinho"
                android:gravity="center_horizontal"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelTotalItemCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/gray"
                android:text="@string/txtLabelTotalItemCarrinho"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tvTotalItemCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:text="@string/txtTotalItemCarrinho"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/btnAddItemCarrinho"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/txtAddItemCarrinho"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSubItemCarrinho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/txtSubItemCarrinho"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
