<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/background"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivProdutoLista"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="0.4"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/tvNomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/nomeProdutoLista" />

        <TextView
            android:id="@+id/tvPrecoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/precoProdutoLista" />

        <TextView
            android:id="@+id/tvMarcaProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/marcaProdutoLista" />
    </LinearLayout>

    <Button
        android:id="@+id/btnItemProdutoAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/txtItemProdutoAdicionar"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</LinearLayout>
