<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".ServidorActivity">

    <TextView
        android:id="@+id/label_server_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLabelServerIP"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etServerIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtIPExample"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnSubmitServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtServerIPBtn"
        android:onClick="onClickConnectToServer"
        android:padding="12dp" />

</LinearLayout>
